# CacheSys

./: .gitignore  CMakeLists.txt  CachePolicy.h  LfuCache.h  LruCache.h  README.md
benchmark/: CMakeLists.txt  cache_benchmark.cpp  cases.cpp  common.h  export_thread_curve.sh  main.cpp
demo/: CMakeLists.txt  cache_runtime.conf  common.cpp  common.h  main.cpp  scenarios.cpp  scenarios.h
evaluation/: CMakeLists.txt
evaluation/scenario/: compare.cpp  evaluator.cpp  evaluator.h  generators.cpp  generators.h  report.cpp  report.h  types.h
evaluation/trace/: compare.cpp  generators.cpp  generators.h  report.cpp  report.h  simulators.cpp  simulators.h  types.h
include/: ArcCache.h  CacheManager.h  CachePolicy.h  CacheWithLoader.h  LfuCache.h  LruCache.h  RuntimeConfig.h  StrategySelector.h  TtlCache.h
include/detail/: ArcCacheNode.h  ArcLfuPart.h  ArcLruPart.h
src/: ArcCache.tpp  CacheManager.tpp  CacheWithLoader.tpp  LfuCache.tpp  LruCache.tpp  TtlCache.tpp
src/detail/: ArcCacheNode.tpp  ArcLfuPart.tpp  ArcLruPart.tpp
test/: CMakeLists.txt  cache_system_test.cpp  lru_lfu_test.cpp
trace/: CMakeLists.txt  policy_scenario_compare.cpp  trace_compare.cpp
